Создана базовая архитектура, верстка шапки сайта

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ремонт квартир</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <nav class="navbar">
+    <div class="container">
+      <div class="navbar-block">
+        <div class="navbar__logo">
+          <img src="img/logo.png" alt="Лого">
+        </div>
+        <div class="navbar__info">
+          <div class="navbar__contacts">
+            <span class="navbar__address">
+              Калуга, Москва, МО
+            </span>
+            <a href="tel:+74954225131" class="navbar__phone">+7 (495) 42-251-31</a>
+          </div>
+          <button class="button navbar__button">
+            Перезвоните мне
+          </button>
+          <!-- /.navbar__contacts -->
+        </div>
+        <!-- /.navbar__info -->
+      </div>
+      <!-- /.navbar__block -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- /.navbar -->
 </body>
 </html>
