Добавлены шрифты + Pixel Perfect

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
           </div>
           <!-- /.hero-text -->
           <div class="hero-image">
-            <img src="img/hero/hero-img.jpg" alt="План квартиры">
+            <img src="img/hero/hero-img.png" class="hero-image__file" alt="План квартиры">
           </div>
           <!-- /.hero-image -->
         </div>
