Добавлена секция Offer + адаптив + pixel perfect

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,43 @@
       <!-- /.contaner -->
     </section>
     <!-- /.hero -->
+    <section class="offer section">
+      <div class="container">
+        <div class="offer-block">
+          <h2 class="section-title offer__title">
+            Мы бесплатно разработаем 
+            дизайн-проект Вашего жилья 
+            и реализуем его!
+          </h2>
+          <span class="section-subtitle offer__subtitle">
+            Оставьте заявку на разработку 
+            бесплатного дизайн-проекта!          
+          </span>
+          <form action="" class="form offer__form">
+            <input type="text" class="input offer__input" placeholder="Ваше имя">
+            <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+          </form>
+          <button class="button offer__button">
+            Получить бесплатный дизайн-проект
+          </button>
+          <div class="offer__call">
+            <div class="offer__manager">
+              Наш менеджер перезвонит Вам
+              в течение 60 секунд
+            </div>
+            <div class="offer__callback">
+              или перезвоните нам сами
+              <div class="offer__phone">
+                +7 (495) 42-251-31  
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.offer-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.offer -->
   </main>
 </body>
 </html>
