Добавлено всплывающее окно на JS

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             </span>
             <a href="tel:+74954225131" class="navbar__phone">+7 (495) 42-251-31</a>
           </div>
-          <button class="button navbar__button">
+          <button class="button navbar__button" id="button">
             Перезвоните мне
           </button>
           <!-- /.navbar__contacts -->
@@ -123,5 +123,18 @@
     </section>
     <!-- /.offer -->
   </main>
+  <div class="modal" id="modal">
+    <div class="modal-dialog">
+      <button class="modal-dialog__close" id="close">
+        &times;
+      </button>
+      <h4 class="modal-dialog__title">
+        Всплывающее окно
+      </h4>
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+  <script src="js/main.js"></script>
 </body>
 </html>
